<resources>
    <string name="app_name">HRMap</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Instellingen</string>

    <string name="information_intro_header">HR-MAP</string>
    <string name="information_intro_nl_h2_1">Welkom bij HR-Map<p></p></string>
    <string name="information_intro_nl_p1">Vanaf nu kan je de weg vinden binnen de schoolgebouwen van Hogeschool rotterdam.</string>
    <string name="information_intro_nl_h2_2">Zoeken</string>
    <string name="information_intro_nl_p2">Zelfs op de plattegrond aan het ronddwalen op zoek naar een lokaal? Gebruik de zoekfunctie en vind meteen de locatie van het lokaal.</string>
    <string name="information_intro_nl_h2_3">Rooster koppelen</string>
    <string name="information_intro_nl_p3">Geen idee welk lokaal je zit bij de volgende les? Ga snel naar je instellingen en koppel de HR-Map met je rooster. Hierdoor kan je meteen ziet waar je moet zijn.</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>



    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
